# Project-Parallel-Compression

./: Cargo.toml  README.md  flake.nix  hosts  justfile
src/: bits.rs  cli.rs  delta.rs  huffman.rs  main.rs
